Fixed update booking on mobile.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,6 +83,15 @@ ul {
   transition: color 0.3s ease;
 }
 
+.form-inputs .btn-outline-secondary {
+  margin-left: 2em;
+  border: none;
+}
+
+.form-inputs .btn-outline-secondary:hover {
+  background-color: black;
+}
+
 .form-inputs .btn-purple {
   width: 100%;
 }
@@ -93,7 +102,7 @@ ul {
 
 .form-inputs .btn-outline-danger {
   color: rgb(251, 55, 55);
-  margin-left: 50px;
+  margin-left: 2em;
 }
 
 .form-inputs .btn-outline-danger:hover {
@@ -101,8 +110,14 @@ ul {
   transition: color 0.3s ease;
 }
 
-@media(max-width: 575px) {
+@media(max-width: 768px) {
   .form-inputs {
     width: 90vw;
+  }
+}
+
+@media(min-width: 1300px) {
+  .form-inputs {
+    width: 650px;
   }
 }
